--- a/src/styles/interview.css
+++ b/src/styles/interview.css
@@ -2,7 +2,7 @@
 
 .interview-page {
     min-height: 100vh;
-    padding-top: 80px;
+    padding-top: 60px;
 }
 
 /* Top Filter Section - Below Navbar */
